--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
 
     <string name="th_have_Space">มีช่องว่าง</string>
     <string name="th_message_have_space">กรุณากรอกทุกช่องสิค๊ะ</string>
+    <string name="unit_temp"> ํC</string>
 </resources>
