--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="th_have_Space">มีช่องว่าง</string>
     <string name="th_message_have_space">กรุณากรอกทุกช่องสิค๊ะ</string>
     <string name="unit_temp"> ํC</string>
+    <string name="unit_rtemp"> ํC</string>
 </resources>
